Include jquery plagin for works' gallery

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>PerfectLine</title>
     <link rel="stylesheet" href="resources/source/css/zeroing.css">
     <link rel="stylesheet" href="resources/source/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="resources/source/css/cartonbox.min.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"
+        integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -55,22 +56,40 @@
                 <p class="featured__subtitle subtitle">WE TURN IDEAS INTO CUSTOM WEBSITE SOLUTIONS THAT YOUR</p>
                 <div class="featured__collection">
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/cards.png" alt="Cards">
+                        <a href="/resources/images/main/featured-works/cards.png" class="cartonbox" data-cb-type="img"
+                            data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/cards.png" id="cards" alt="Cards">
+                        </a>
                     </div>
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/bottles.png" alt="Bottles">
+                        <a href="/resources/images/main/featured-works/bottles.png" class="cartonbox" data-cb-type="img"
+                            data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/bottles.png" alt="Bottles">
+                        </a>
                     </div>
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/price.png" alt="Price">
+                        <a href="/resources/images/main/featured-works/price.png" class="cartonbox" data-cb-type="img"
+                            data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/price.png" alt="Price">
+                        </a>
                     </div>
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
+                        <a href="/resources/images/main/featured-works/ice-cream.png" class="cartonbox"
+                            data-cb-type="img" data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/ice-cream.png" alt="Ice cream">
+                        </a>
                     </div>
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
+                        <a href="/resources/images/main/featured-works/tea-bag.png" class="cartonbox" data-cb-type="img"
+                            data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/tea-bag.png" alt="Tea bag">
+                        </a>
                     </div>
                     <div class="featured__demo">
-                        <img src="resources/images/main/featured-works/book.png" alt="Book">
+                        <a href="/resources/images/main/featured-works/book.png" class="cartonbox" data-cb-type="img"
+                            data-cb-group="gallery">
+                            <img src="/resources/images/main/featured-works/book.png" alt="Book">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -345,6 +364,8 @@
         </div>
     </footer>
     <script src="/resources/js/form-processing.js"></script>
+    <script src="/resources/js/cartonbox.min.js"></script>
+    <script src="/resources/js/popup.js"></script>
 </body>
 
 </html>
