--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
     <header class="header">
         <div class="header__container">
             <a class="header__link" href="#">LOGIN FOR ADMIN</a>
+            <a href="#" class="header__link-small">LOGIN</a>
             <img class="header__logo" src="resources/images/header/logo.svg" alt="Main logo">
-            <h1 class="header__title">
-                SAY HELLO TO
-                <span class="header__company">PERFECT LINE!</span>
-            </h1>
-            <button class="header__button">CONTACT US</button>
-            <div class="header__logos">
-                <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
-                <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
+            <div class="header__info">
+                <h1 class="header__title">
+                    SAY HELLO TO
+                    <span class="header__company">PERFECT LINE!</span>
+                </h1>
+                <button class="header__button">CONTACT US</button>
+                <div class="header__logos">
+                    <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
+                    <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
+                </div>
             </div>
         </div>
     </header>
