Add link for Contact us button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     SAY HELLO TO
                     <span class="header__company">PERFECT LINE!</span>
                 </h1>
-                <button class="header__button">CONTACT US</button>
+                <a href="#contact">
+                    <button class="header__button">CONTACT US</button>
+                </a>
                 <div class="header__logos">
                     <img src="resources/images/header/logo-blue.svg" alt="Blue logo">
                     <img src="resources/images/header/logo-purple.svg" alt="Purple logo">
@@ -296,7 +298,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
+        <div class="contact" id="contact">
             <div class="contact__container container">
                 <div class="contact__feedback">
                     <form action="" class="contact__form">
