Add inner links between forms and pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <div class="header__container">
-            <a class="header__link" href="#">LOGIN FOR ADMIN</a>
+            <a class="header__link" href="/resources/views/admin/forms/auth-form.html">LOGIN FOR ADMIN</a>
             <a href="#" class="header__link-small">LOGIN</a>
             <img class="header__logo" src="resources/images/header/logo.svg" alt="Main logo">
             <div class="header__info">
